--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-02-04 12:16:11 -0800 
+%% Created for Rose at 2015-02-04 16:21:55 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -115,20 +115,20 @@
 @book{macwhinney2000,
 	Author = {MacWhinney, Brian},
 	Date-Added = {2015-01-26 17:44:10 +0000},
-	Date-Modified = {2015-01-26 17:44:10 +0000},
+	Date-Modified = {2015-02-05 00:17:04 +0000},
 	Publisher = {Mahwah, NJ: Lawrence Erlbaum Associates.},
-	Title = {The CHILDES project: Tools for analyzing talk. Third edition.},
+	Title = {The {CHILDES} project: Tools for analyzing talk. Third edition.},
 	Year = {2000}}
 
 @article{goodman2008,
 	Author = {Goodman, Judith C and Dale, Philip S and Li, Ping},
 	Date-Added = {2015-01-26 17:40:00 +0000},
-	Date-Modified = {2015-01-26 17:41:12 +0000},
+	Date-Modified = {2015-02-05 00:15:58 +0000},
 	Journal = {Journal of Child Language},
 	Number = {3},
 	Pages = {515--531},
 	Publisher = {Cambridge Univ Press},
-	Title = {Does frequency count? Parental input and the acquisition of vocabulary},
+	Title = {Does frequency count? {P}arental input and the acquisition of vocabulary},
 	Volume = {35},
 	Year = {2008}}
 
@@ -257,12 +257,12 @@
 @article{feldman2000,
 	Author = {Feldman, Heidi M and Dollaghan, Christine A and Campbell, Thomas F and Kurs-Lasky, Marcia and Janosky, Janine E and Paradise, Jack L},
 	Date-Added = {2015-01-12 16:26:46 +0000},
-	Date-Modified = {2015-02-04 19:19:46 +0000},
+	Date-Modified = {2015-02-05 00:19:55 +0000},
 	Journal = {Child Development},
 	Number = {2},
 	Pages = {310--322},
 	Publisher = {Wiley Online Library},
-	Title = {Measurement properties of the MacArthur Communicative Development Inventories at ages one and two years},
+	Title = {Measurement properties of the {M}ac{A}rthur {C}ommunicative {D}evelopment {I}nventories at ages one and two years},
 	Volume = {71},
 	Year = {2000}}
 
@@ -843,8 +843,8 @@
 @book{fenson2007,
 	Author = {Fenson, Larry and Bates, Elizabeth and Dale, Philip S and Marchman, Virginia A and Reznick, J Steven and Thal, Donna J},
 	Date-Added = {2014-07-01 16:40:46 +0000},
-	Date-Modified = {2014-07-01 16:40:48 +0000},
-	Title = {MacArthur-Bates communicative development inventories},
+	Date-Modified = {2015-02-05 00:21:05 +0000},
+	Title = {Mac{A}rthur-{B}ates {C}ommunicative {D}evelopment {I}nventories},
 	Year = {2007}}
 
 @article{frank2011,
@@ -3161,12 +3161,12 @@
 @article{kuhl2004,
 	Author = {Kuhl, P.K.},
 	Date-Added = {2010-07-03 14:35:45 +0200},
-	Date-Modified = {2015-02-04 19:20:56 +0000},
-	Journal = {Nature Reviews Neuroscienceeviews neuroscience},
+	Date-Modified = {2015-02-05 00:16:42 +0000},
+	Journal = {Nature Reviews Neuroscience},
 	Number = {11},
 	Pages = {831--843},
 	Publisher = {Nature Publishing Group},
-	Title = {Early language acquisition: cracking the speech code},
+	Title = {Early language acquisition: {C}racking the speech code},
 	Volume = {5},
 	Year = {2004}}
 
@@ -4762,8 +4762,8 @@
 @article{fenson1994,
 	Author = {Fenson, L. and Dale, P.S. and Reznick, J.S. and Bates, E. and Thal, D.J. and Pethick, S.J. and Tomasello, M. and Mervis, C.B. and Stiles, J.},
 	Date-Added = {2010-06-14 11:39:46 +0200},
-	Date-Modified = {2015-02-04 19:20:30 +0000},
-	Journal = {Monographs of the Society for Research in Child Developmentesearch in child development},
+	Date-Modified = {2015-02-05 00:15:29 +0000},
+	Journal = {Monographs of the Society for Research in Child Development},
 	Number = {5},
 	Publisher = {JSTOR},
 	Title = {Variability in early communicative development},
